<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context="com.example.teteu.babystepsandroid.MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_marginTop="100dp"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_app"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="137dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preencha"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_confirmar"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            />


    </LinearLayout>

</ScrollView>
